@@ -31,6 +31,7 @@
 - added a new view engine property `@{version}` that appends `?ts=start_app_timestamp`
 - extended `@{import()}` method now supports `@style_name.css` and `@script_name.js` (due to HTTP cache reasons, it automatically appends the argument `?ts=start_app_timestamp` to the URL)
 - fixed loading extensions
+- fixed unit-tests for HTMLParser
 
 ========================
 0.0.12
